tests/ui/g-reserved-control-label-plain-message.stderr
error[E0080]: evaluation panicked: control labels require capability payloads
 --> src/global.rs
  |
  | ...   crate::global::validate_sendable_message::<M>();
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::send::<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>, 0>::{constant#0}` failed inside this call
  |
note: inside `hibana::global::validate_sendable_message::<hibana::global::Message<hibana::global::LabelMarker<110>, u32>>`
 --> $RUST/core/src/panic.rs
  |
  | ...   $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  | ...   panic!("control labels require capability payloads");
  |       ---------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole...
  | |         let to = <To as KnownRole>::I...
  | |         crate::global::validate_role_...
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<110>, u32>, 0>`
 --> tests/ui/g-reserved-control-label-plain-message.rs:4:13
  |
4 | ... = g::send::<g::Role<0>, g::Role<1>, g::Msg<110, u32>, 0>();
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
